# cra-toolkit

./: .gitignore  .golangci.yml  CLAUDE.md  Taskfile.yml  go.mod  go.sum  mkdocs.yml  pyproject.toml  tools.go
.github/workflows/: ci.yml  deploy-docs.yml
cmd/cra/: main.go
docs/: getting-started.md  index.md  strategy.md
docs/tools/: csaf.md  evidence.md  policykit.md  report.md  vex.md
internal/cli/: config.go  csaf.go  evidence.go  hooks.go  policykit.go  report.go  root.go  root_test.go  version.go  vex.go  vex_test.go
pkg/csaf/: csaf.go  csaf_test.go  document.go  document_test.go  integration_test.go  llm_judge_test.go  notes.go  notes_test.go  product_tree.go  product_tree_test.go  references.go  references_test.go  remediations.go  remediations_test.go  scores.go  scores_test.go  threats.go  threats_test.go  vulnerabilities.go  vulnerabilities_test.go
pkg/evidence/: archive.go  assemble.go  collect.go  collect_test.go  completeness.go  completeness_test.go  crossvalidate.go  crossvalidate_test.go  evidence.go  integration_test.go  llm_judge_test.go  manifest.go  manifest_test.go  render.go  sign.go  (+6 more)
policies/: cra_no_kev.rego  cra_provenance.rego  cra_reach_call_paths.rego  cra_reach_confidence.rego  cra_reach_method.rego  cra_sbom_valid.rego  cra_signatures.rego  cra_support_period.rego  cra_update_mechanism.rego  cra_vex_coverage.rego  embed.go
showcase/: README.md  VERIFICATION.md
site/: mkdocs.yml
testdata/: generate.sh
testdata/integration/rust-not-reachable/source/: Cargo.toml
testdata/integration/rust-not-reachable/source/src/: main.rs
(+735 files in other folders)
