[package]
name = "rust-not-reachable-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# hyper 0.14.10 is affected by CVE-2023-26964 (Denial of Service via HTTP/2)
# but this code only uses HTTP/1.1 client, not the vulnerable HTTP/2 server path
hyper = { version = "=0.14.10", features = ["client", "http1"] }
tokio = { version = "1", features = ["full"] }
